# ML-pipeline

./: README.md  main.py  pyproject.toml
ds/: model.py  utils.py
ds/tests/: test_model.py
ml-env/: pyvenv.cfg
