[tool.poetry]
name = "ml-pipeline"
version = "0.1.0"
description = ""
authors = ["Nicholas <nictann96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
jupyter = "^1.1.1"
numpy = "^2.1.3"
pydantic = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
